--- a/NN_same_person_recognition_with_PCA.ipynb
+++ b/NN_same_person_recognition_with_PCA.ipynb
@@ -6,7 +6,7 @@
       "name": "trab 1 bioinspirada 2 com PCA",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOV62MpUZbLEoF0vDgDOUdH",
+      "authorship_tag": "ABX9TyNQJwF8zygCnwtMsdrMr7H2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,19 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/lucas-albs/NN_same_person_recognition/blob/main/NN_same_person_recognition_with_PCA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This project will be detecting whether two pictures contain the face of the same person.\n",
+        "\n",
+        "To do this, a basic neural network will be used. The model will be the MultiLayer Perceptron Classifier (MLPClassifier), from sklearn.\n",
+        "\n",
+        "Additionally, the statistical method PCA will be used to reduce the number of dimensions in the image. Since MLPClassifiers are not ideal for image processing, the PCA will be required."
+      ],
+      "metadata": {
+        "id": "KpBWNP4zC_84"
+      }
     },
     {
       "cell_type": "code",
@@ -59,6 +72,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The dataset being used is the Labeled Faces in the Wild, made available by sklearn. **There are pictures of 5749 people**.\n",
+        "\n",
+        "After a few tries with a MLPClassifier without the PCA, it could be concluded that this model is not ideal for the problem at hand, since the accuracy barely got above 53%. This is why a pre-processing technique was adopted: a principal component analysis (PCA) was performed before feeding the images to the MLPClassifier.\n",
+        "\n",
+        "The PCA processes the images and returns an eigenface, which have only the most striking traits. The PCA reduces the dimensionality of the data, maintaining only the most important features.\n",
+        "\n",
+        "In a simplified way, the PCA will calculate the maximum variance axis. For that, it will calculate the eigenvectors from the data matrix, and only the largest eigenvectors are kept. Then, the data is projected onto these eigenvectors, reducing dimensions while retaining as much information as possible. The result are the eigenfaces."
+      ],
+      "metadata": {
+        "id": "GHErRa6aDlE2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "lfw_pairs_train = fetch_lfw_pairs(subset='train', color=True)\n",
@@ -83,6 +111,17 @@
       },
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Below, a simple demonstration of what these eigenfaces look like.\n",
+        "\n",
+        "The block of code below is not necessary for the project and is here for visualization only. It was an adapted code from [here](https://www.stats.ox.ac.uk/~sejdinov/teaching/dmml17/PCA_eigenfaces.html#:~:text=We%20will%20apply%20PCA%20to,faces%20collected%20from%20the%20web.)."
+      ],
+      "metadata": {
+        "id": "YuNzlMJBGsqc"
+      }
     },
     {
       "cell_type": "code",
@@ -119,7 +158,7 @@
         "\n",
         "\n",
         "\n",
-        "print(\"PCA faces:\")\n",
+        "print(\"Eigenfaces (PCA):\")\n",
         "X_test_rec = pca.inverse_transform(X_test_pca)\n",
         "plot_faces(X_test_rec[:10])"
       ],
@@ -170,6 +209,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Below, the neural network will finally be trained and validated. It will receive the PCA data.\n",
+        "\n",
+        "A simple search algorithm with GridSearchCV is executed to find the best possible hyperparameters for the MLPClassifier.\n",
+        "\n",
+        "Note: this is a very simple and inneficient grid search and it takes a long time to complete. There are also a few other problems with it. This is because finding the best neural network in an optimal amount of time was not the objective of this project. Currently, I am working on another project which has precisely this objective. It should be available on my GitHub in a few days."
+      ],
+      "metadata": {
+        "id": "Z0XOfdDdHknA"
+      }
     },
     {
       "cell_type": "code",
@@ -235,6 +287,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The best hyperparameters found were: {'activation': 'relu', 'batch_size': 128, 'hidden_layer_sizes': (2048,), 'learning_rate': 'adaptive', 'solver': 'adam'}\n",
+        "\n",
+        "The accuracy obtained was 71%. Much better than the 53% obtained without PCA. Obviously, it is still far from good, because the MLPClassifier is not a good model for this task. To achieve better results, some other model more specialized for image processing would be needed, such as a Convolutional Neural Network. \n",
+        "\n",
+        "Still, this project concludes by showing how PCA can be applied to improve neural network performance by reducing the dimensionality of the data. \n",
+        "\n",
+        "Below, some examples of the neural network in action:"
+      ],
+      "metadata": {
+        "id": "4fYaAj3BIvRa"
+      }
     },
     {
       "cell_type": "code",
