--- a/NN_same_person_recognition_with_PCA.ipynb
+++ b/NN_same_person_recognition_with_PCA.ipynb
@@ -6,7 +6,7 @@
       "name": "trab 1 bioinspirada 2 com PCA",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNQJwF8zygCnwtMsdrMr7H2",
+      "authorship_tag": "ABX9TyOVIkRP1rucws7bEbxN8d53",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "\n",
         "After a few tries with a MLPClassifier without the PCA, it could be concluded that this model is not ideal for the problem at hand, since the accuracy barely got above 53%. This is why a pre-processing technique was adopted: a principal component analysis (PCA) was performed before feeding the images to the MLPClassifier.\n",
         "\n",
-        "The PCA processes the images and returns an eigenface, which have only the most striking traits. The PCA reduces the dimensionality of the data, maintaining only the most important features.\n",
+        "**The PCA processes the images and returns an eigenface, which have only the most striking traits**. It reduces the dimensionality of the data, maintaining only the most important features.\n",
         "\n",
         "In a simplified way, the PCA will calculate the maximum variance axis. For that, it will calculate the eigenvectors from the data matrix, and only the largest eigenvectors are kept. Then, the data is projected onto these eigenvectors, reducing dimensions while retaining as much information as possible. The result are the eigenfaces."
       ],
