--- a/NN_same_person_recognition_with_PCA.ipynb
+++ b/NN_same_person_recognition_with_PCA.ipynb
@@ -6,7 +6,7 @@
       "name": "trab 1 bioinspirada 2 com PCA",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOVIkRP1rucws7bEbxN8d53",
+      "authorship_tag": "ABX9TyNIVTuDlLn+d3HffG4BqbUY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -293,11 +293,11 @@
       "source": [
         "The best hyperparameters found were: {'activation': 'relu', 'batch_size': 128, 'hidden_layer_sizes': (2048,), 'learning_rate': 'adaptive', 'solver': 'adam'}\n",
         "\n",
-        "The accuracy obtained was 71%. Much better than the 53% obtained without PCA. Obviously, it is still far from good, because the MLPClassifier is not a good model for this task. To achieve better results, some other model more specialized for image processing would be needed, such as a Convolutional Neural Network. \n",
+        "**The final accuracy obtained was 71%**. Much better than the 53% obtained without PCA. Obviously, it is still far from good, because the MLPClassifier is not a good model for this task. To achieve better results, some other model more specialized for image processing would be needed, such as a Convolutional Neural Network. \n",
         "\n",
         "Still, this project concludes by showing how PCA can be applied to improve neural network performance by reducing the dimensionality of the data. \n",
         "\n",
-        "Below, some examples of the neural network in action:"
+        "**Below, some examples of the neural network in action**:"
       ],
       "metadata": {
         "id": "4fYaAj3BIvRa"
