--- a/NN_same_person_recognition_with_PCA.ipynb
+++ b/NN_same_person_recognition_with_PCA.ipynb
@@ -6,7 +6,7 @@
       "name": "trab 1 bioinspirada 2 com PCA",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIVTuDlLn+d3HffG4BqbUY",
+      "authorship_tag": "ABX9TyMl4V9PvTPTZm6Br7x9m6Pa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This project will be detecting whether two pictures contain the face of the same person.\n",
+        "**This artificial intelligence algorithm will be detecting whether two pictures contain the face of the same person**.\n",
         "\n",
         "To do this, a basic neural network will be used. The model will be the MultiLayer Perceptron Classifier (MLPClassifier), from sklearn.\n",
         "\n",
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "WC_3mEmO9bci"
       },
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "jibsvso-LATA"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
         "\n",
         "After a few tries with a MLPClassifier without the PCA, it could be concluded that this model is not ideal for the problem at hand, since the accuracy barely got above 53%. This is why a pre-processing technique was adopted: a principal component analysis (PCA) was performed before feeding the images to the MLPClassifier.\n",
         "\n",
-        "**The PCA processes the images and returns an eigenface, which have only the most striking traits**. It reduces the dimensionality of the data, maintaining only the most important features.\n",
+        "**The PCA processes the images and returns an eigenface, which has only the most striking traits**. It reduces the dimensionality of the data, maintaining only the most important features.\n",
         "\n",
         "In a simplified way, the PCA will calculate the maximum variance axis. For that, it will calculate the eigenvectors from the data matrix, and only the largest eigenvectors are kept. Then, the data is projected onto these eigenvectors, reducing dimensions while retaining as much information as possible. The result are the eigenfaces."
       ],
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "R0L2H5DTtLRk"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
         "id": "yb2_qtwb00rz",
         "outputId": "86a288fc-a5a5-48fb-872b-3a6d3bb88a35"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
